--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@
     height: 100px;
     
 }
+.header_list>li:hover{
+    cursor: pointer;
+    color: RGB(125, 86, 86);
+    text-underline-offset: 7px;
+    text-decoration: underline;
+}
 
 .header_logo>img{
     height: 86px;
@@ -37,8 +43,9 @@
 
 
 
+
 .verification{
-    color: RGB(125, 86, 86);
+    color: rgb(125, 86, 86);
     text-decoration: underline;
     text-underline-offset: 7px;
 }
@@ -114,12 +121,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 130px;
+    gap: 80px;
+    color: black;
+    margin-top: 10px;
 }
 
 
 .cp{
-    border: 2px solid red;
+    margin-top: 30px;
+    padding-bottom: 15px;
     text-align: center;
     font-size: 18px;
 }
