add-> verify.html

--- a/style.css
+++ b/style.css
@@ -122,8 +122,11 @@
     align-items: center;
     justify-content: center;
     gap: 80px;
-    color: black;
     margin-top: 10px;
+}
+
+.social-icons>*{
+    color: black;
 }
 
 
