--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,6 +77,7 @@
     color: rgb(255, 255, 255);
     padding: 20px 40px;
     border: 1px solid white;
+    cursor: pointer;
     
 }
 .verify_btn:hover{
@@ -136,3 +137,6 @@
     text-align: center;
     font-size: 18px;
 }
+
+
+
